# yolo-faobb

./: README.md  dataset.py  how_to_patch_yolo.ipynb  how_to_patch_yolo2.ipynb  main.py  model.py  pyproject.toml  visualize.py  yolo11-obb-full-rot.yaml
datasets/: screw_long_obb_dataset.yaml
datasets/screw_long_obb_dataset/: classes.txt
datasets/screw_long_obb_dataset/labels/: 03e53812-screws_006.txt  0b73fe5c-screws_019.txt  0cb614cc-screws_016.txt  10959b57-screws_018.txt  1b77e481-screws_009.txt  21b21dd3-screws_011.txt  4da17130-screws_014.txt  5eca3d3c-screws_008.txt  6d4114b4-screws_005.txt  8569b6f5-screws_017.txt  a0afc5a8-screws_001.txt  aa573fbe-screws_002.txt  b41f98c6-screws_013.txt  c586d4fa-screws_003.txt  cfd97a7f-screws_015.txt  dae87f9b-screws_004.txt  df153d59-screws_010.txt  e6271892-screws_020.txt  e8b7799a-screws_007.txt  eb239ead-screws_012.txt
